# scrapli_scp

./: .gitignore  LICENSE  README.rst  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-test-pypi.yml
scrapli_scp/: __init__.py  exceptions.py  factory.py  logging.py
scrapli_scp/asyncscp/: __init__.py  base.py  cisco_iosxe.py  fortinet_fortios.py
test/: fortios.py  iosxe.py  scp.py  sshconfig.txt
